--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: latha;
     color: white;
-    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.38), rgba(0, 0, 0, 0)), url(Cherrys\ cake\ front\ view.pdf) no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.38), rgba(0, 0, 0, 0)), url(Cherrys\ cake\ front\ view.png) no-repeat;
     background-size: cover;
 
 
